cmake_minimum_required(VERSION 3.10)

project(LeetCodeSolutions)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(twosum 1/twosum.cpp)
add_executable(addtwonums 2/addtwonums.cpp)
add_executable(longest_substring 3/longest_substring.cpp)
add_executable(median_arrays 4/median_arrays.cpp)
add_executable(roman_to_int 13/roman_to_int.cpp)
add_executable(longest_common_prefix 14/longest_common_prefix.cpp)
add_executable(3sum 15/3sum.cpp)
add_executable(letter_combinations 17/letter_combinations.cpp)
add_executable(remove_nth_node 19/remove_nth_node.c)
add_executable(valid_parentheses 20/valid_parentheses.cpp)
add_executable(merge_sorted_lists 21/merge_sorted_lists.cpp)
add_executable(make_parentheses 22/make_parentheses.cpp)
add_executable(merge_k_lists 23/merge_k_lists.cpp)
add_executable(reverse_k_nodes 25/reverse_k_nodes.cpp)
add_executable(first_last_position 34/first_last_position.cpp)
add_executable(search_insert_position 35/search_insert_position.cpp)
add_executable(combination_sum 39/combination_sum.cpp)
add_executable(first_missing_positive 41/first_missing_positive.cpp)
add_executable(jump_game_2 45/jump_game_2.cpp)
add_executable(permutations 46/permutations.cpp)
add_executable(rotate_image 48/rotate_image.cpp)
add_executable(group_anagrams 49/group_anagrams.cpp)
add_executable(maximum_subarray 53/maximum_subarray.cpp)
add_executable(spiral_matrix 54/spiral_matrix.cpp)
add_executable(jump_game 55/jump_game.cpp)
add_executable(merge_intervals 56/merge_intervals.cpp)
add_executable(unique_paths 62/unique_paths.cpp)
add_executable(minimum_path_sum 64/minimum_path_sum.cpp)
add_executable(climbing_stairs 70/climbing_stairs.cpp)
add_executable(edit_distance 72/edit_distance.cpp)
add_executable(set_matrix_zeroes 73/set_matrix_zeroes.cpp)
add_executable(search_matrix 74/search_matrix.cpp)
add_executable(sort_colours 75/sort_colours.cpp)
add_executable(minimum_window_substring 76/minimum_window_substring.cpp)
add_executable(subsets 78/subsets.cpp)
add_executable(word_search 79/word_search.cpp)
add_executable(pascals_triangle 118/pascals_triangle.cpp)
add_executable(buy_sell_stocks 121/buy_sell_stocks.cpp)
add_executable(longest_consecutive_sequence 128/longest_consecutive_sequence.cpp)
add_executable(palindrome_partitioning 131/palindrome_partitioning.cpp)
add_executable(single_number 136/single_number.cpp)
add_executable(word_break 139/word_break.cpp)
add_executable(lru_cache 146/lru_cache.cpp)
add_executable(maximum_product 152/maximum_product.cpp)
add_executable(min_stack 155/min_stack.cpp)
