cmake_minimum_required(VERSION 3.20)

project(LeetCodeSolutions)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Leetcode
add_executable(twosum 1/twosum.cpp)
add_executable(addtwonums 2/addtwonums.cpp)
add_executable(longest_substring 3/longest_substring.cpp)
add_executable(median_arrays 4/median_arrays.cpp)
add_executable(longest_palindromic_substring 5/longest_palindromic_substring.cpp)
add_executable(container_with_most_water 11/container_with_most_water.cpp)
add_executable(roman_to_int 13/roman_to_int.cpp)
add_executable(longest_common_prefix 14/longest_common_prefix.cpp)
add_executable(3sum 15/3sum.cpp)
add_executable(letter_combinations 17/letter_combinations.cpp)
add_executable(remove_nth_node 19/remove_nth_node.c)
add_executable(valid_parentheses 20/valid_parentheses.cpp)
add_executable(merge_sorted_lists 21/merge_sorted_lists.cpp)
add_executable(make_parentheses 22/make_parentheses.cpp)
add_executable(merge_k_sorted_lists 23/merge_k_sorted_lists.cpp)
add_executable(reverse_k_nodes 25/reverse_k_nodes.cpp)
add_executable(search_rotated_array 33/search_rotated_array.cpp)
add_executable(first_last_position 34/first_last_position.cpp)
add_executable(search_insert_position 35/search_insert_position.cpp)
add_executable(combination_sum 39/combination_sum.cpp)
add_executable(first_missing_positive 41/first_missing_positive.cpp)
add_executable(jump_game_2 45/jump_game_2.cpp)
add_executable(permutations 46/permutations.cpp)
add_executable(rotate_image 48/rotate_image.cpp)
add_executable(group_anagrams 49/group_anagrams.cpp)
add_executable(maximum_subarray 53/maximum_subarray.cpp)
add_executable(spiral_matrix 54/spiral_matrix.cpp)
add_executable(jump_game 55/jump_game.cpp)
add_executable(merge_intervals 56/merge_intervals.cpp)
add_executable(unique_paths 62/unique_paths.cpp)
add_executable(minimum_path_sum 64/minimum_path_sum.cpp)
add_executable(climbing_stairs 70/climbing_stairs.cpp)
add_executable(edit_distance 72/edit_distance.cpp)
add_executable(set_matrix_zeroes 73/set_matrix_zeroes.cpp)
add_executable(search_matrix 74/search_matrix.cpp)
add_executable(sort_colours 75/sort_colours.cpp)
add_executable(minimum_window_substring 76/minimum_window_substring.cpp)
add_executable(subsets 78/subsets.cpp)
add_executable(word_search 79/word_search.cpp)
add_executable(pascals_triangle 118/pascals_triangle.cpp)
add_executable(buy_sell_stocks 121/buy_sell_stocks.cpp)
add_executable(longest_consecutive_sequence 128/longest_consecutive_sequence.cpp)
add_executable(palindrome_partitioning 131/palindrome_partitioning.cpp)
add_executable(single_number 136/single_number.cpp)
add_executable(word_break 139/word_break.cpp)
add_executable(lru_cache 146/LRU_cache.cpp)
add_executable(maximum_product 152/maximum_product.cpp)
add_executable(min_stack 155/min_stack.cpp)
add_executable(majority_element 169/majority_element.cpp)
add_executable(rotate_array 189/rotate_array.cpp)
add_executable(house_robber 198/house_robber.cpp)
add_executable(number_islands 200/number_islands.cpp)
add_executable(course_schedule 207/course_schedule.cpp)
add_executable(trie 208/trie.cpp)
add_executable(kth_largest_element 215/kth_largest_element.cpp)
add_executable(product_except_self 238/product_except_self.cpp)
add_executable(move_zeroes 283/move_zeroes.cpp)
add_executable(find_duplicate_number 287/find_duplicate_number.cpp)
add_executable(median_finder 295/median_finder.cpp)
add_executable(longest_increasing_subsequence 300/longest_increasing_subsequence.cpp)
add_executable(coin_change 322/coin_change.cpp)
add_executable(increasing_triplet_subsequence 334/increasing_triplet_subsequence.cpp)
add_executable(reverse_vowels 345/reverse_vowels.cpp)
add_executable(top_k_frequent_elements 347/top_k_frequent_elements.cpp)
add_executable(is_subsequence 392/is_subsequence.cpp)
add_executable(decode_string 394/decode_string.cpp)
add_executable(partition_equal_subset_sum 416/partition_equal_subset_sum.cpp)
add_executable(find_all_anagrams 438/find_all_anagrams.cpp)
add_executable(string_compression 443/string_compression.cpp)
add_executable(subarray_sum_equals_k 560/subarray_sum_equals_k.cpp)
add_executable(can_place_flowers 605/can_place_flowers.cpp)
add_executable(maximum_average_subarray_1 643/maximum_average_subarray_1.cpp)
add_executable(find_pivot_index 724/find_pivot_index.cpp)
add_executable(rotten_oranges 994/rotten_oranges.cpp)
add_executable(max_consecutive_ones_3 1004/max_consecutive_ones_3.cpp)
add_executable(gcd_strings 1071/gcd_strings.cpp)
add_executable(greatest_number_candies 1431/greatest_number_candies.cpp)
add_executable(substring_maximum_vowels 1456/substring_maximum_vowels.cpp)
add_executable(longest_subarray_of_1s 1493/longest_subarray_of_1s.cpp)
add_executable(max_number_of_k_sum_pairs 1679/max_number_of_k_sum_pairs.cpp)
add_executable(highest_altitude 1732/highest_altitude.cpp)
add_executable(merge_strings_alternatively 1768/merge_strings_alternatively.cpp)
add_executable(find_difference_two_arrays 2215/find_difference_two_arrays.cpp)
add_executable(unique_number_of_occurrences 1207/unique_number_of_occurrences.cpp)
add_executable(two_strings_are_close 1657/two_strings_are_close.cpp)
add_executable(design_twitter 355/design_twitter.cpp)
add_executable(equal_row_and_column_pairs 2352/equal_row_and_column_pairs.cpp)
add_executable(remove_stars_from_string 2390/remove_stars_from_string.cpp)
add_executable(asteroid_collision 735/asteroid_collision.cpp)
add_executable(palindromic_substrings 647/palindromic_substrings.cpp)
add_executable(number_of_recent_calls 933/number_of_recent_calls.cpp)
add_executable(dota_senate 649/dota_senate.cpp)
add_executable(contains_duplicate 217/contains_duplicate.cpp)
add_executable(valid_anagram 242/valid_anagram.cpp)
add_executable(valid_palindrome 125/valid_palindrome.cpp)
add_executable(twosum2_sorted 167/twosum2_sorted.cpp)
add_executable(reverse_polish_notation 150/reverse_polish_notation.cpp)
add_executable(daily_temperatues 739/daily_temperatures.cpp)
add_executable(binary_search 704/binary_search.cpp)
add_executable(longest_nondecreasing_subarray 2771/longest_nondecreasing_subarray.cpp)
add_executable(binary_tree_max_path_sum 124/binary_tree_max_path_sum.cpp)
add_executable(delete_and_earn 740/delete_and_earn.cpp)
add_executable(minimum_knight_moves 1197/minimum_knight_moves.cpp)
